[gd_scene load_steps=27 format=2]

[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_0.png" type="Texture" id=1]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_2.png" type="Texture" id=2]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_1.png" type="Texture" id=3]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_4.png" type="Texture" id=4]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_0.png" type="Texture" id=5]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_6.png" type="Texture" id=6]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_7.png" type="Texture" id=7]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_8.png" type="Texture" id=8]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_5.png" type="Texture" id=9]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_0.png" type="Texture" id=10]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_1.png" type="Texture" id=11]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_9.png" type="Texture" id=12]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_4.png" type="Texture" id=13]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_1.png" type="Texture" id=14]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_3.png" type="Texture" id=15]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_2.png" type="Texture" id=16]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_5.png" type="Texture" id=17]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_3.png" type="Texture" id=18]
[ext_resource path="res://Minijocs/Lluita_de_sables/Imatges_lluita_de_sables/P1 P2/P1.png" type="Texture" id=19]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_0.png" type="Texture" id=20]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_2.png" type="Texture" id=21]
[ext_resource path="res://Minijocs/Lluita_de_sables/P1.gd" type="Script" id=22]
[ext_resource path="res://Minijocs/Lluita_de_sables/EspasaP1.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "salta",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "corre",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": false,
"name": "ataca",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 17 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -7 )
scale = Vector2( 0.0829167, 0.112083 )
texture = ExtResource( 19 )

[node name="EspasaP1" type="Area2D" parent="."]
script = ExtResource( 23 )

[node name="CollisionEspasa" type="CollisionShape2D" parent="EspasaP1"]
position = Vector2( 35, 0 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "quiet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
